--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <h1>Chat App</h1>
-    <button id="increment">+1</button>
+
+    <form id="message-form">
+        <h1>Weather</h1>
+        <input name="message" placeholder="Message">
+        <button value="submit">Submit</button>
+    </form>
+    
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
