--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -14,7 +14,7 @@
         <input name="message" placeholder="Message">
         <button value="submit">Submit</button>
     </form>
-    
+    <button id="send-location">Send location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
