--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -9,12 +9,24 @@
 <body>
     <h1>Chat App</h1>
 
+    <div id="messages"></div>
+
     <form id="message-form">
-        <h1>Weather</h1>
+        <!-- <h1>Weather</h1> -->
         <input name="message" placeholder="Message">
-        <button value="submit">Submit</button>
+        <button>Send</button>
     </form>
     <button id="send-location">Send location</button>
+
+    <script id="message-template" type="text/html">
+        <div>
+            <p>{{message}}</p>
+        </div>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
